// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem should render a Link and match snapshot 1`] = `
<Styled(CleanLink)
  to="/augsburg/en/events/first_event"
>
  <styled.img
    alt=""
    src="thumbnail"
  />
  <styled.div>
    <styled.div>
      first Event
    </styled.div>
  </styled.div>
</Styled(CleanLink)>
`;

exports[`ListItem should render an Anchor and match snapshot 1`] = `
<Styled(CleanLink)
  to="https://tuerantuer.org"
>
  <styled.img
    alt=""
    src="thumbnail"
  />
  <styled.div>
    <styled.div>
      first Event
    </styled.div>
  </styled.div>
</Styled(CleanLink)>
`;
